force-app/main/default/objects/Preventive_Maintanenace__c/Preventive_Maintanenace__c.object-meta.xml
<CustomObject>
    <label>Preventive Maintenance</label>
    <nameField>
        <label>Preventive Maintanenace Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preventive Maintanenace</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>