force-app/main/default/objects/Preventive_Maintanenace__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Preventive_Maintanenace</relationshipName>
    <type>Lookup</type>
</CustomField>